<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/modify_current_code"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="34dp"
        android:background="@drawable/bg_white_rounded_with_border_selector"
        android:gravity="center_vertical"
        android:hint="@string/modify_current_code"
        android:textColorHint="#cdcdcd"
        android:inputType="textPassword"
        android:minHeight="@dimen/min_item_height"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/modify_new_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_white_rounded_with_border_selector"
        android:gravity="center_vertical"
        android:hint="@string/modify_new_password"
        android:textColorHint="#cdcdcd"
        android:inputType="textPassword"
        android:minHeight="@dimen/min_item_height"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/modify_again_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_white_rounded_with_border_selector"
        android:gravity="center_vertical"
        android:hint="@string/modify_again_password"
        android:textColorHint="#cdcdcd"
        android:inputType="textPassword"
        android:minHeight="@dimen/min_item_height"
        android:paddingLeft="16dp"
        android:singleLine="true"
        android:textCursorDrawable="@null"
        android:textSize="16sp" />

    <com.zhan.framework.ui.widget.RippleButton
        android:id="@+id/btn_modify_code"
        ripple:rv_type="rectangle"
        ripple:rv_zoom="true"
        style="@style/text_white_bg_blue_btn_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/finish"
        android:enabled="false"
        />
</LinearLayout>