<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:src="@mipmap/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/blue"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        >
    <EditText
        android:id="@+id/login_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="34dp"
        android:background="@drawable/bg_white"
        android:gravity="center_vertical"
        android:hint="@string/login_input_number"
        android:minHeight="@dimen/min_item_height"
        android:paddingLeft="16dp"
        android:paddingRight="12dp"
        android:singleLine="true"
        android:textSize="16sp"
        />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputPsw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        >
    <EditText
        android:id="@+id/login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_white"
        android:gravity="center_vertical"
        android:hint="@string/login_input_pwd"
        android:inputType="textPassword"
        android:minHeight="@dimen/min_item_height"
        android:paddingLeft="16dp"
        android:paddingRight="12dp"
        android:singleLine="true"
        android:textSize="16sp"/>
    </android.support.design.widget.TextInputLayout>

    <com.zhan.framework.ui.widget.RippleButton
        android:id="@+id/btn_login"
        ripple:rv_type="rectangle"
        ripple:rv_zoom="true"
        style="@style/text_white_bg_blue_btn_style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/login_title"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"/>

</LinearLayout>