<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/main_background"></FrameLayout>

    <View
        android:layout_width="match_parent"
        android:background="@color/divider_color"
        android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5"
        android:orientation="horizontal"
        android:paddingBottom="2dp"
        android:paddingTop="6dp">

        <TextView
            android:id="@+id/home_page_course"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="1dp"
            android:gravity="center"
            android:text="@string/course_title"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/home_page_student"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="1dp"
            android:gravity="center"
            android:text="@string/student_title"
            android:textColor="@color/text_color_content" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:id="@+id/home_page_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="1dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/message_title"
                android:textColor="@color/text_color_content" />
            <com.zhan.vip_teacher.ui.widget.RedDotView
                android:id="@+id/mine_reddotview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/home_page_message"
                android:layout_alignEnd="@id/home_page_message"
                android:layout_alignTop="@id/home_page_message"
                android:visibility="gone" />

        </RelativeLayout>
        <!--<TextView
            android:id="@+id/home_page_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="1dp"
            android:gravity="center"
            android:text="@string/message_title"
            android:textColor="@color/text_color_content" />-->

        <TextView
            android:id="@+id/home_page_mine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="1dp"
            android:gravity="center"
            android:text="@string/mine_title"
            android:textColor="@color/text_color_content" />
    </LinearLayout>

</LinearLayout>