<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:minHeight="@dimen/min_item_height"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="10dp"
         >

        <TextView
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:textColor="#7F7F7F"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/mine_person_teacher_name"/>

        <TextView
            android:id="@+id/tv_teachername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="#B7B7B7"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:minHeight="@dimen/min_item_height"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <TextView
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:textColor="#7F7F7F"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/mine_person_teacher_phone"/>

        <TextView
            android:id="@+id/tv_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="#B7B7B7"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:minHeight="@dimen/min_item_height"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <TextView
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:textColor="#7F7F7F"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/mine_person_teacher_qq"/>

        <TextView
            android:id="@+id/tv_teacher_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="#B7B7B7"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:minHeight="@dimen/min_item_height"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        >

        <TextView
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:textColor="#7F7F7F"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/mine_person_teacher_address"/>

        <TextView
            android:id="@+id/tv_teacher_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="14sp"
            android:layout_weight="6"
            android:textColor="#B7B7B7"
            android:gravity="right"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/person_change_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:minHeight="@dimen/min_item_height"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:textColor="#7F7F7F"
            android:textSize="@dimen/text_size_normal"
            android:text="@string/mine_person_change_password"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/arrow_right" />

    </LinearLayout>

</LinearLayout>